--- a/orders/templates/orders/order_list.html
+++ b/orders/templates/orders/order_list.html
@@ -1,3 +1,4 @@
+ <!-- order_list.html -->
 {% extends 'base.html' %}
 
 {% block content %}
@@ -7,6 +8,9 @@
         {% for order in orders %}
         <li>
             <a href="{% url 'order_details' order.id %}">Order #{{ order.id }} - {{ order.order_date }}</a>
+            <p>Total Price: ${{ order.total_price }}</p>
+            <p>Status: {{ order.status }}</p>
+            <!-- Add more order details as needed -->
         </li>
         {% endfor %}
     </ul>
