--- a/orders/templates/orders/order_details.html
+++ b/orders/templates/orders/order_details.html
@@ -1,3 +1,4 @@
+<!-- order_detail.html -->
 {% extends 'base.html' %}
 
 {% block content %}
@@ -6,6 +7,12 @@
     <p>Order ID: {{ order.id }}</p>
     <p>Order Date: {{ order.order_date }}</p>
     <p>Shipping Address: {{ order.shipping_address }}</p>
+    <h3>Ordered Items</h3>
+    <ul>
+        {% for item in order.items.all %}
+        <li>{{ item.product.name }} - Quantity: {{ item.quantity }} - Price: ${{ item.price }}</li>
+        {% endfor %}
+    </ul>
     <!-- Add more order details as needed -->
 </div>
 {% endblock %}
