--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -4,27 +4,50 @@
 
 {% block content %}
 <!-- Specific content for the home page goes here -->
-<div class="jumbotron">
-  <h1>Welcome to Warani Watches!</h1>
-  <p>Your premiere destination for luxury watches.</p>
-  <!-- Add more homepage specific content here -->
+<div class="jumbotron" style="position: relative; width: 100%; height: 100vh; overflow: hidden;">
+  <video autoplay muted loop style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;">
+    <source src="/static/videos/watch.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+  <div class="jumbotron-text" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; text-align: center;">
+    <h1>Discover Timeless Elegance</h1>
+    <p>Explore our exquisite collection of luxury watches, crafted with precision and passion.</p>
+    <!--add more-->
+  </div>
 </div>
 
-<div class="row">
-  <div class="col-md-4">
-    <h2>Heading</h2>
-    <p>Content goes here</p>
-    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-  </div>
-  <div class="col-md-4">
-    <h2>Heading</h2>
-    <p>Content goes here</p>
-    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-  </div>
-  <div class="col-md-4">
-    <h2>Heading</h2>
-    <p>Content goes here</p>
-    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-  </div>
-{% endblock content %}
 
+<!-- Related products -->
+<div class="row align-items-stretch">
+  <div class="col-md-4">
+    <div class="card h-100">
+      <img src="/static/images/p1.png" class="card-img-top" alt="Product 1">
+      <div class="card-body">
+        <h2 class="card-title">Apple Watch mm14</h2>
+        <p class="card-text">Description of Product 1</p>
+        <a href="#" class="btn btn-secondary">View details &raquo;</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="card h-100">
+      <img src="/static/images/p2.png" class="card-img-top" alt="Product 2">
+      <div class="card-body">
+        <h2 class="card-title">Hwaui</h2>
+        <p class="card-text">Description of Product 2</p>
+        <a href="#" class="btn btn-secondary">View details &raquo;</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="card h-100">
+      <img src="/static/images/p3.jpg" class="card-img-top" alt="Product 3">
+      <div class="card-body">
+        <h2 class="card-title">Samsunge</h2>
+        <p class="card-text">Description of Product 3</p>
+        <a href="#" class="btn btn-secondary">View details &raquo;</a>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock content %}
