--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,3 +33,21 @@
   --bs-primary: #0056b3; /* New Blue */
   --bs-secondary: #495057; /* New Gray */
 }
+
+.jumbotron-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  text-align: center;
+  z-index: 1; /* Ensure text is above the video */
+  width: 80%; /* Set width to avoid text overflowing on smaller screens */
+  max-width: 600px; /* Limit maximum width */
+}
+
+.product-image {
+  width: 100%;
+  height: 200px; /* Set the desired height for all product images */
+  object-fit: cover; /* Ensure the image covers the entire container */
+}
