--- a/templates/base.html
+++ b/templates/base.html
@@ -8,17 +8,16 @@
     <title>{% block title %}Warani Dropshipping E-Commerce Site{% endblock %}</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <!-- style CSS -->
+    <!-- FontAwesome for icons -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-     <!-- FontAwesome for icons -->
-     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
-      {% block extra_css %}{% endblock %}
+    {% block extra_css %}{% endblock %}
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="{% url 'home' %}">
-            <!-- Replace 'path/to/your/logo.png' with the actual path to your logo image -->
             <img src="{% static 'C:\Users\Pc-Mart\Documents\co\co\static\images\logo.png' %}" alt="Warani" height="50">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,9 +38,7 @@
                     <a class="nav-link" href="{% url 'contact' %}">Contact</a>
                 </li>
             </ul>
-            
-                <!-- Icons -->
-                <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'cart_detail' %}">
                         <i class="fas fa-shopping-cart"></i>
@@ -62,24 +59,31 @@
     </div>
 
     <!-- Footer -->
-            <footer class="footer mt-auto py-3 bg-light">
-            <div class="container text-center">
-                <span class="text-muted">© 2024 Warani IT Solutions</span>
-                <!-- Social media links -->
-                <div>
-                    <a href="https://facebook.com/yourpage" class="text-dark mx-2">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a href="https://twitter.com/yourpage" class="text-dark mx-2">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <a href="https://instagram.com/yourpage" class="text-dark mx-2">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <!-- Add more social media links as needed -->
-                </div>
+    <footer class="footer mt-auto py-3 bg-light">
+        <div class="container text-center">
+            <span class="text-muted">© 2024 Warani IT Solutions</span>
+            <div class="mt-3">
+                <p>Email: info@warani.com</p>
+                <p>Phone: +964 770 4444 866</p>
             </div>
-        </footer>
+            <div class="mt-3">
+                <a href="{% url 'contact' %}" class="text-dark mx-2">Contact Us</a>
+                <!-- Add more links as needed -->
+            </div>
+            <div class="mt-3">
+                <a href="https://facebook.com/yourpage" class="text-dark mx-2">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="https://twitter.com/yourpage" class="text-dark mx-2">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="https://instagram.com/yourpage" class="text-dark mx-2">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <!-- Add more social media links as needed -->
+            </div>
+        </div>
+    </footer>
 
     <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
